--- a/styles/style.css
+++ b/styles/style.css
@@ -70,75 +70,11 @@ nav a:hover {
   font-weight: bold;
 }
 
-/* MOBILE NAVBAR */
-.navbar {
-    display: none;
-    overflow: hidden;
-    background-color: #333;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    background-color: red;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.show {
-    display: block;
-}
-
 /* CONTENT */
 .content {
   grid-area: content;
   padding: 3em 2em;
-  min-height: 100%;
+  height: 100vh;
 }
 
 main {
@@ -216,12 +152,15 @@ main {
   border-radius: 10px;
   width: 40%;
   text-align: center;
+  min-height: 69px;
 }
 
 .btn {
   border-radius: 10px;
   padding: 6px;
   transform: scale(1.2);
+  background: #F2AF29;
+  font-family: 'Chela One', cursive;
 }
 
 .dwBtn {
@@ -247,9 +186,16 @@ main {
 }
 
 #shadeBox {
-  background: rgba(240, 236, 232, .6);
+  background: rgba(240, 236, 232, .9);
+  width: 90%;
+  margin: auto;
   padding: 15px;
   text-align: center;
+  min-height: 365px;
+  border-radius: 10px;
+  -webkit-box-shadow: 17px 10px 23px -5px rgba(0,0,0,0.79);
+  -moz-box-shadow: 17px 10px 23px -5px rgba(0,0,0,0.79);
+  box-shadow: 17px 10px 23px -5px rgba(0,0,0,0.79);
 }
 
 #mountainList {
@@ -259,7 +205,37 @@ main {
   margin: 20px;
 }
 
+/* GAUNTLET RANDOM */
+
+#gauntletNamesContent {
+  background: url(http://www.gauntlet-rpg.com/uploads/7/7/8/1/77811662/editor/logo-gauntlet_63.png?1511913257);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#gauntletHeading {
+  color: white;
+  text-shadow: 5px 5px 11px rgba(255, 255, 255, 0.2);
+  text-shadow: 6px 6px 30px rgba(255, 255, 255, 1);
+  -webkit-text-stroke: 1px black;
+}
+
+/* FOREST NAMES */
+#forestNamesContent {
+  background-image: url(../images/forest.jpg);
+  background-size: cover;
+}
+
+#forestHeading {
+  color: #E0D87A;
+  text-shadow: 0px -7px 10px rgba(0, 0, 0, 1);
+}
+
 @media screen and (max-width: 900px) {
+  .content {
+    height: 100%;
+  }
+
   .grid {
     display: grid;
     grid-template-columns: 1fr;
