--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ html, body {
   height: 100%;
   border-right: 2px solid black;
   position: fixed;
+  max-width: 250px;
 }
 
 #sidebarLogo {
@@ -74,7 +75,7 @@ nav a:hover {
 .content {
   grid-area: content;
   padding: 3em 2em;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 main {
